--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "jsonwebtoken": "^7.2.1",
     "lodash": "^4.17.4",
     "mongoose": "^4.8.1",
+    "mongoose-unique-validator": "^1.0.3",
     "validator": "^6.2.1"
   },
   "devDependencies": {
