--- a/package.json
+++ b/package.json
@@ -1,14 +1,17 @@
 {
-  "name": "ecommerce-admin",
+  "name": "ecommerce-api",
   "version": "1.0.0",
-  "description": "",
+  "description": "API for an ecommerce website admin",
   "main": "index.js",
   "scripts": {
     "start": "nodemon server/app.js",
     "createsuperuser": "node server/createsuperuser.js",
     "test": "export NODE_ENV=test && mocha --recursive"
   },
-  "author": "",
+  "engines": {
+    "node": "6.9.2"
+  },
+  "author": "Alec Barlow (abarlow85@gmail.com)",
   "license": "ISC",
   "dependencies": {
     "axios": "^0.15.3",
