--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "express": "^4.14.1",
     "jsonwebtoken": "^7.2.1",
     "lodash": "^4.17.4",
+    "mongodb": "^2.2.24",
     "mongoose": "^4.8.1",
     "mongoose-unique-validator": "^1.0.3",
     "validator": "^6.2.1",
