--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "API for an ecommerce website admin",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon server/app.js",
+    "start": "node server/app.js",
     "createsuperuser": "node server/createsuperuser.js",
     "test": "export NODE_ENV=test && mocha --recursive"
   },
