--- a/server/config/config.json
+++ b/server/config/config.json
@@ -2,11 +2,13 @@
   "test": {
     "PORT": 8080,
     "MONGODB_URI": "mongodb://localhost:27017/ecommerceAdminTest",
-    "JWT_SECRET" : "asdfasdfasdfasdfweqrafsdgfdsweqr"
+    "JWT_SECRET" : "asdfasdfasdfasdfweqrafsdgfdsweqr",
+    "CORS_ORIGIN" : "http://localhost:3000"
   },
   "development": {
     "PORT": 8080,
     "MONGODB_URI": "mongodb://localhost:27017/ecommerceAdmin",
-    "JWT_SECRET" : "jklasdfiouwerjklasfdiou"
+    "JWT_SECRET" : "jklasdfiouwerjklasfdiou",
+    "CORS_ORIGIN" : "http://localhost:3000"
   }
 }
